<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Live-Ticker EHC Neuwied</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Tore</string>
    <string name="title_section2">Ticker</string>
    <string name="title_section3">Strafen</string>
    <string name="want_to_close">Möchten Sie den Live-Ticker wirklich beenden?</string>
    <string name="ok">Ja</string>
    <string name="cancel">Abbrechen</string>
    <string name="close">Beenden</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="overtime">Overtime</string>
    <string name="noScore">-:-</string>
    <string name="refresh">Aktualisieren</string>
    <string name="logo_home_description">Logo of the home team</string>
    <string name="logo_guest_description">Logo of the guest team</string>
    <string name="copy">Kopieren</string>
    <string name="settings">Einstellungen</string>
    <string name="set_update_interval">Sekunden bis zum nächsten Update</string>
     <string name="set">Festlegen</string>

</resources>
